--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,198 +1,250 @@
 body {
-    background: linear-gradient(-45deg, #daddd3, #fefffc);
-    margin: 0;
-    padding: 0;
-  }
-
-#page-container {
-  position: relative;
-  min-height: 100vh;
-}  
+  background: linear-gradient(-45deg, #daddd3, #fefffc);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .flex-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }  
 
+
 /* Header Section */
-    
+  
 header {
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-    height: 69px;
-    background-color: #000000;
-    border-bottom: 1px solid seashell;
-    align-items: center;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  height: 69px;
+  border-bottom: 1px solid seashell;
+  align-items: center;
 }
-  
+
 header img {
-    height: 65px;
-    padding-left: 10px;
-    background-color: white;
+  height: 65px;
+  padding-left: 10px;
+  background-color: white;
 }
-  
+
+.top-navbar {
+position: absolute;
+right: 0;
+}
+
+@media screen and (max-width: 991px) { 
+.top-navbar {
+  position: relative;
+}
+}
+
 nav {
-    display: flex;
-    justify-content: flex-end;
-    font-family: 'Ubuntu Condensed', sans-serif;
-    font-size: 30px;
-    color: white;
-    flex-grow: 1;
+display: flex;
+justify-content: flex-end;
+font-family: 'Ubuntu Condensed', sans-serif;
+font-size: 30px;
+color: white;
+flex-grow: 1;
 }
+/*nav {
+  font-size: 1.5em;
+  display:flex;
+  justify-content: space-between;
+  font-family: 'Ubuntu Condensed', sans-serif;
+  color: white;
   
+
+} 
+ul{
+  border:1px solid bisque;
+  flex : 1;
+  max-width: 100%;
+
+}
+*/
+
+
 nav span {
-    display: inline-block;
-    padding: 19px 30px;
+  display: inline-block;
+  padding: 19px 30px;
 }
 
 nav a:link, a:visited {
-    color: white;
+  color: white;
 }
 
 nav a:hover {
-    color: red;
+  color: red;
 }
 
 /* Main Section */
 .main {
-    padding-top: 69px;
-    opacity: 0.9;
-    width: 1200px;
-    margin: auto;
-    padding-bottom: 20rem;
+  padding-top: 120px;
+  opacity: 0.9;
+  width: 100%;
+  margin: auto;
 }
 
 
 /* Introduction Section */
 #intro {
-    height: 500px;
-    background-image: url("../img/restaurant.jpg");
-    padding-top: 70px;
-    border: 5px solid #333;
-    border-radius: 25px;
-  }
-  
+  height: 500px;
+  background-image: url("../img/restaurant.jpg");
+  padding-top: 70px;
+  border: 5px solid #333;
+  border-radius: 25px;
+}
+
+
 #intro .content {
-    background-color: transparent;
-    color: white;
-    font-size: 34px;
-    text-align: center;
-    padding: auto;
+  background-color: transparent;
+  color: white;
+  font-size: 34px;
+  text-align: center;
+  padding: auto;
 }
 
 #intro .content h3{
-    font-size: 25px;
-    padding: 270px;
+  font-size: 25px;
 }
 
 /* Features Section */
 
 #features {
-    height: 700px;
-    width: 1000px;
-    margin: auto;
-    padding-top: 10px;
-    font-family: 'Ubuntu Condensed', sans-serif;
-    font-size: 20px;
+  height: 700px;
+  width: 1000px;
+  margin: auto;
+  padding-top: 10px;
+  font-family: 'Ubuntu Condensed', sans-serif;
+  font-size: 20px;
 }
-  
+
 .item {
-  margin: 0;
-  display: flex;
-  border: 5px solid #333;
-  background-color: #fff;
-  margin-bottom: 2rem;
+margin: 0;
+display: flex;
+border: 5px solid #333;
+background-color: #fff;
+margin-bottom: 2rem;
 }
 
 .item div:first-child {
-  flex: 1;
-  background-size: cover;
-  background-position: center;
+flex: 1;
+background-size: cover;
+background-position: center;
 }
 
 .item:first-of-type div:first-child {
-    background-image: url("../img/restaurant\ searching.jpg");
+  background-image: url("../img/restaurant\ searching.jpg");
 }
 
 .item div:nth-last-of-type(2) {
-    background-image: url("../img/tracker\ map.jpg");   
+  background-image: url("../img/tracker\ map.jpg");   
 }
 
 .item:last-of-type div:first-child {
-    background-image: url("../img/form.jpg");
+  background-image: url("../img/form.jpg");
 }
 
 .item div:last-child {
-    margin: 2rem;
-    flex: 2;
+  margin: 2rem;
+  flex: 2;
 }
 
 .item h3 {
-  font-size: 1.5rem;
-  margin-top: 0;
-  font-weight: 400;
+font-size: 1.5rem;
+margin-top: 0;
+font-weight: 400;
 }
 
 .item p {
-  font-size: 1rem;
-  line-height: 1.4;
-  font-weight: 400;
+font-size: 1rem;
+line-height: 1.4;
+font-weight: 400;
 }
 
 .item p:last-of-type {
-  margin-bottom: 0;
+margin-bottom: 0;
 }
 .column {
-  width: 80%;
-  margin: 0 auto;
-  max-width: 700px;
+width: 80%;
+margin: 0 auto;
+max-width: 700px;
 }
+
+/*@media all and (max-width: 600px) {
+body { margin: 0; }
+// .flex div { flex: 1 !important; } optional: equalizes the visual "weight" of the photo and description
+}
+@media all and (max-width: 450px) {
+h2 {
+  margin: 1rem;
+}
+.flex {
+  border: 0;
+  margin: 0;
+  border-bottom: 2px solid #333;
+}
+.flex div:last-child {
+  margin: 1rem;
+}
+.column {
+  width: 100%;
+}
+}
+@media all and (max-width: 400px) {
+.flex { flex-direction: column; } 
+.flex div:first-child {
+  min-height: 200px;
+}
+}*/
 
 /* Footer Section */
 
 footer {
-	position: absolute;
-	width: 100%;
-  bottom: 0;
-  height: 7rem;
-	background-color: #000000;
+position: relative;
+width: 100%;
+bottom: -100px;
+background-color: #000000;
 }
 
 footer p {
-  color: white;
-  font-family: 'Ubuntu Condensed', sans-serif;
-  font-size: 25px;
-	text-align: center;
-	width: 100%;
-	box-sizing: border-box;
+color: white;
+font-family: 'Ubuntu Condensed', sans-serif;
+font-size: 25px;
+text-align: center;
+width: 100%;
+box-sizing: border-box;
 }
-
-/* Mobile Devices Support */
-@media all and (max-width: 600px) {
-  body { margin: 0; }
-  flex div { flex: 1 !important; }
+/* @media all and (max-width: 600px) {
+body { margin: 0; }
+flex div { flex: 1 !important; }
 }
 @media all and (max-width: 450px) {
-  h2 {
-    margin: 1rem;
-  }
-  .flex {
-    border: 0;
-    margin: 0;
-    border-bottom: 2px solid #333;
-  }
-  .flex div:last-child {
-    margin: 1rem;
-  }
-  .column {
-    width: 100%;
-  }
+h2 {
+  margin: 1rem;
+}
+.flex {
+  border: 0;
+  margin: 0;
+  border-bottom: 2px solid #333;
+}
+.flex div:last-child {
+  margin: 1rem;
+}
+.column {
+  width: 100%;
+}
+nav{
+  flex-direction: column;
+}
 }
 @media all and (max-width: 400px) {
-  .flex { flex-direction: column; } 
-  .flex div:first-child {
-    min-height: 200px;
-  }
+.flex { flex-direction: column; } 
+.flex div:first-child {
+  min-height: 200px;
 }
+} */
+
+
